fix: make icons smaller on mobile

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -1004,7 +1004,7 @@ button.disabled-button:hover .button-wrapper {
 
 @media screen and (max-width: 800px) {
     * {
-        --icon-size: 1.75rem;
+        --icon-size: 1.5rem;
         --container-padding: 2rem 1rem;
     }
     
